fixed nav bar and spacing in mobile contact page

--- a/contactResponsive.css
+++ b/contactResponsive.css
@@ -4,6 +4,13 @@
     background-repeat: no-repeat;
     background-position: left;
   }
+  .contact-me {
+    margin-left: 14px;
+    font-family: fantasy;
+    font-size: 64px;
+    padding-top: 348px;
+    white-space: nowrap;
+  }
   .link-push {
     margin-left: 0px;
   }
@@ -32,7 +39,7 @@
   .message-padding {
     font-size: 20px;
     padding-left: 87px;
-}
+  }
   .card-back {
     margin-left: 0px;
     margin-right: 0px;
